# OnvifServer

./: .gitignore  CMakeLists.txt  README.md  autogen.sh
src/: onvif_server.c  onvif_service.c  onvif_service.h
src/common/: ini_utils.c  ini_utils.h  service_common.c  service_common.h
src/devicemgmt/: device_network_interface.c  device_service.c  device_service.h  network_utils.c  network_utils.h
src/discovery/: discovery_service.c  discovery_service.h  soapClient_minimal.c  soapClient_minimal.h  wsdd.nsmap
src/media/: media_service.c  media_service.h
src/rtsp/: onvif_rtsp_media_factory.c  onvif_rtsp_media_factory.h  onvif_rtsp_service.c  onvif_rtsp_service.h  onvif_static_plugins.c
